[package]
name = "hermesd"
description = "Exports designated system properties to the upstream service"
version = "2023.3.1"
edition = "2021"
license = "MIT"
authors = ["NWLNEXUS LLC  <support@nwlnexus.net>"]
rust-version = "1.67.1"
default-run = "hermesd"
include = ["src/**/*", "LICENSE-MIT", "README.md"]

[[bin]]
name = "hermesd"
path = "src/main.rs"


[package.metadata.deb]
extended-description = "Exports designated system properties to the upstream service"
depends = "$auto, systemd"
section = "admin"
priority = "optional"
assets = [
    ["target/release/hermesd", "usr/bin/hermesd", "755"],
    ["debian/hermesd.service", "/lib/systemd/system/hermesd.service", "644"],
]
maintainer-scripts = "debian/scripts"
conf-files = ["/etc/hermesd/config.toml"]
systemd-units = { enable = false }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["cargo", "derive", "env", "string", "suggestions"] }
clap_complete = "4.1.4"
color-eyre = "0.6.2"
env_logger = "0.10.0"
hostname = "0.3.1"
inquire = "0.6.0"
is-terminal = "0.4.4"
lazy_static = "1.4.0"
log = "0.4.17"
open = "4.0.0"
os_type = "2.6.0"
paste = "1.0.12"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
